[gd_scene load_steps=4 format=3 uid="uid://ds3wf6xwu60vw"]

[ext_resource type="Script" uid="uid://c3o26bdhrmdiy" path="res://script/void_fissure.gd" id="1_0vegc"]
[ext_resource type="Texture2D" uid="uid://dlwbqjsqud4sh" path="res://texture/void_fissure.png" id="2_34oo6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_70dkm"]
radius = 13.0
height = 64.0

[node name="VoidFissure" type="Area2D"]
scale = Vector2(1.8, 1.8)
collision_layer = 0
collision_mask = 4
script = ExtResource("1_0vegc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_34oo6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_70dkm")

[node name="TickTimer" type="Timer" parent="."]

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true
